# travelsync.us

./: .env.example  .gitignore  AGENTS.md  BUSINESS_LOGIC_SPEC.md  DESIGN.md  PLAN.md  README.md  package-lock.json  package.json  pyproject.toml
apps/agents/: AGENTS.md  pyproject.toml
apps/agents/src/travel_sync_agents/: __init__.py  errors.py
apps/agents/src/travel_sync_agents/agents/: __init__.py  itinerary_agent.py
apps/agents/src/travel_sync_agents/clients/: __init__.py  exa_client.py  firecrawl_client.py
apps/agents/src/travel_sync_agents/config/: __init__.py  env.py
apps/agents/src/travel_sync_agents/mappers/: __init__.py  source_mapper.py
apps/agents/tests/unit/: test_itinerary_agent.py  test_source_mapper.py
apps/api/: AGENTS.md  go.mod  pyproject.toml
apps/api/cmd/server/: main.go
apps/api/internal/ai/: client.go
apps/api/internal/amadeus/: client.go  flights.go  types.go
apps/api/internal/config/: config.go
apps/api/internal/database/: db.go
apps/api/internal/handler/: api.go  health.go  middleware.go  participant.go  plan.go  reference.go  response.go  search.go  summary.go
apps/api/internal/models/: airline.go  airport.go  country.go  location.go  organization.go  participant.go  plan.go  plan_destination.go  plan_flight.go  region.go  user.go
apps/api/internal/repository/: errors.go  mysql_errors.go  mysql_errors_test.go  participant.go  plan.go  reference.go  reference_test.go  search.go
apps/api/internal/router/: api_routes_test.go  router.go  router_test.go
apps/api/internal/service/: errors.go  participant.go  plan.go  ranking.go  recommendation.go  reference.go  search.go  search_test.go  summary.go
apps/api/src/travel_sync_api/: __init__.py  app.py  server.py
apps/api/tests/unit/: test_app.py
data/: docker-compose.yaml
scripts/: dev.sh  (+1 more)
(+54 files in other folders)
